finished notebook for dataset

--- a/dataset_wrapper.ipynb
+++ b/dataset_wrapper.ipynb
@@ -8,12 +8,12 @@
     "I will be explaining the reasoning behind the implementation of the dataset wrapper for the vectorcardiograms and dyssynchrony indices.\n",
     "\n",
     "## Goal\n",
-    "The goal is to be able to iterate through a given dataset with minimum effort for the purpose of training a neural network in batches. Ideally, we would want to be able to call ```next_batch``` and it would give us the next batch of a specified size within the dataset. \n",
+    "The goal is to be able to easily iterate through a given dataset when we are training a neural network. Ideally, we would want to be able to call ```next_batch``` and it would give us the next batch of a specified size within the dataset. \n",
     "\n",
     "## Next Batch\n",
     "We provide additional requirements of the ```next_batch``` function here. They are as follows:\n",
-    "* Deliver a specified number of examples upon calling ```next_batch``` for both the dyssynchrony index and the vectorcardiogram\n",
-    "* We deliver the batches sequentially. For example, if we deliver the the first batch, it should be example numbers 1 through 10. The second batch should deliver example numbers 11-20. There are exceptions for corner cases however (such as when the specified batch size is greater than the dataset size, or if we have reached the end of the dataset and need to pull from the beginning).\n",
+    "* Deliver a specified number of examples upon calling ```next_batch``` for the vectorcardiograms sequences, vectorcardiogram lengths, and the dyssynchrony indices.\n",
+    "* The batches are delivered sequentially. For example, if we deliver the the first batch, it should contain example numbers 0 through 9. The second batch should deliver example numbers 10 through 20.\n",
     "* If we have iterated through the entire dataset, then start pulling batches from the beginning. This is reasonable because most often, neural networks are usually trained with more than one epoch (the network sees the entire dataset usually more than once)."
    ]
   },
@@ -22,13 +22,29 @@
    "metadata": {},
    "source": [
     "## Implementation Steps\n",
+    "### *Step 0: Setup*\n",
+    "To download the dataset, go to https://www.dropbox.com/sh/guyvsq010l2d5gw/AAB3kYvolOyPqhE2Ad0lTiKIa?dl=0 and download the folder ```BiV2``` that corresponds to Patient 2 (our choice of Patient 2 is arbitrary, and we can use any of the patients available). Within that folder, we find the following files and folders:\n",
+    "* ```vcg_measured```* The actual (recorded) VCG (not simulated)\n",
+    "* ```vcg_model/``` The VCG simulations\n",
+    "* ```BiV2_LVdyssync_opt.txt```* The calculated dyssynchrony index (not from simulations)\n",
+    "* ```BiV2_LVdyssync.txt``` The dyssynchrony indices resulting from the simulations\n",
+    "* ```pts_to_eval.txt```* The parameters of the simulations\n",
+    "\n",
+    "\\* We are not interested in these files.\n",
+    "\n",
+    "Once you download and extract it (usually comes as a .zip file), run the following:\n",
+    "```\n",
+    ">>> cd BiV2/vcg_model\n",
+    "```\n",
+    "and we are ready to begin!\n",
+    "\n",
     "### *Step 1: Rename Files*\n",
     "We wish to rename the files for three reasons:\n",
-    "* Impose an ordering on the example numbers \n",
+    "* Impose an ordering on the example numbers that is clearly visible in the file name\n",
     "* Make the filenames more readable\n",
-    "* Maintain that the filenames are predictable and follow a well-defined format\n",
+    "* *Maintain* that the filenames are predictable and follow a well-defined format\n",
     "\n",
-    "Thus, we will execute the following bash script to rename all the ```.txt``` files in the current directory:\n",
+    "Thus, we will execute the following bash script to rename all the ```.txt``` files in the current directory into something more readable:\n",
     "```\n",
     "a=1\n",
     "for file in allParams-1_ECG_VCG_{1..608}_dump.txt; do \n",
@@ -41,9 +57,12 @@
     "    let a=a+1\n",
     "done\n",
     "```\n",
+    "The result will be 608 files that are renamed to ```version%%%.txt```, where the number is padded with three digits.\n",
+    "\n",
+    "\n",
     "Since the original filenames were not zero-padded, when we ```ls```, we would get ```allParams-1_ECG_VCG_109_dump.txt``` lexicographically before ```allParams-1_ECG_VCG_10_dump.txt```. Thus, instead of iterating through each ```file in ls *.txt```, we have to iterate through them using curly braces ```{1..608}``` to maintain that ```allParams-1_ECG_VCG_9_dump.txt``` corresponds to ```version009.txt``` and not ```allParams-1_ECG_VCG_109_dump.txt```\n",
     "\n",
-    "To show that this has preserved the original ordering, look at the content of the first file before and after the renaming.\n",
+    "To show that this has preserved the original ordering, look at the content of the file labelled ```1``` before and after the renaming.\n",
     "\n",
     "#### Before:\n",
     "```\n",
@@ -74,7 +93,7 @@
     "0.11859204\t0.01606282\t-0.00100526\n",
     "0.13539736\t0.01838106\t-0.00139427\n",
     "```\n",
-    "It works!"
+    "The first ten lines appear to match. It works!"
    ]
   },
   {
@@ -82,7 +101,7 @@
    "metadata": {},
    "source": [
     "### *Step 2: Convert To NumPy Arrays*\n",
-    "We wish to read in each VCG data as a NumPy 2D matrix and store them all as a 3D matrix. Similarly, we wish to read in each dyssynchrony index, a scalar value, and store them all as a column vector. We will read them in with a simple python script, provided below (We provided the script as Markdown because it only needs to be executed once, and we have done it for you):\n",
+    "We wish to read in each VCG data as a NumPy 2D matrix and store them all in a list (creating a list of 2D matrices, thus becoming 3D). Similarly, we wish to read in each dyssynchrony index, a scalar value, and store them all as a column vector. We will read them in with simple python scripts, provided below (We provided the script as Markdown because it only needs to be executed once, and we have done it for you):\n",
     "\n",
     "#### Read in Vectorcardiogram Simulations with Python\n",
     "```\n",
@@ -129,7 +148,7 @@
     "```\n",
     "\n",
     "#### Converting the Dyssynchrony Indices to Class Indices\n",
-    "When we save the first file, ```dyssync.npy```, each entry is a real value between ```0.5``` and ```1```. However, we need to map it to the set of indices of classes, namely, the integers between ```1``` and ```5```. The mapping is as follows:\n",
+    "When we save the first file, ```dyssync.npy```, each entry is a real number value between ```0.5``` and ```1```. However, we need to map it to the set of class indices (what each VCG belongs to), namely, the integers between ```0``` and ```4```. The mapping is as follows:\n",
     "* Multiply by 10.\n",
     "* Floor the result.\n",
     "* Subtract 5.\n",
@@ -180,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -250,7 +269,7 @@
        "array([170, 170, 170, 170, 170], dtype=int32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,12 +283,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the data type of the ```vcg.npy``` matrix is a 32 bit float whereas the data type of the ```vcg_length.npy``` matrix is a 32 bit int, to match the parameter requirements of ```sequence_length``` in ```tf.nn.dynamic_rnn```."
+    "Note that the data type of each entry in the ```vcg.npy``` matrix is a 32 bit float whereas the data type of the ```vcg_length.npy``` matrix is a 32 bit int, to match the parameter requirements of ```sequence_length``` in ```tf.nn.dynamic_rnn```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All VCGs have 170 timesteps.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check that the length of each VCG is exactly 170 for Patient 2\n",
+    "if vcg_length[vcg_length < 170]:\n",
+    "    print \"Exists a VCG with a length not equal to 170 timesteps.\"\n",
+    "else:\n",
+    "    print \"All VCGs have 170 timesteps.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that all VCG's for Patient 2 have exactly 170 timesteps. It is possible that this feature does not exist in other patients."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -308,12 +358,124 @@
     "* Provide the ```next_batch``` function.\n",
     "* Randomize the dataset, and store how we randomized it.\n",
     "* Store the sequence lengths of each VCG.\n",
-    "* Allow the user to specify how to split the data set into training, validation, and testing.\n",
     "\n",
-    "This class will be called ```Simulations```. Within it contains three members, ```train, validate,``` and ```test```, which correspond to the three subsets we will divide our dataset into. For clarification, the purpose of the three sets are as follows:\n",
+    "This class will be called ```Simulations```. Within it, contains three members, ```train, validate,``` and ```test```, which correspond to the three subsets we will divide our dataset into. For clarification, the purpose of the three sets are as follows:\n",
     "* Training set: a set of examples used for learning the weights of the classifier.\n",
     "* Validation set: a set of examples used to tune the hyperparameters (architectures, not weights) of a classifier. We can use this to determine the optimum number of hidden units in a neural network.\n",
-    "* Testing set: a set of examples used ONLY to access the performance of a fully specified classifier."
+    "* Testing set: a set of examples used ONLY to access the performance of a fully specified classifier.\n",
+    "\n",
+    "For the purpose of simplifying implementation, we will pre-partition the training, validation, and testing sets, as well as fix the batch size to ```32``` examples. We will try to get the split as close to a ```60%, 20%, 20%``` split, but we will keep the set sizes divisble by ```32```. Thus, our set sizes will be as follows:\n",
+    "* Training set: 416 examples, 13 batches (~68%)\n",
+    "* Validation set: 96 examples, 3 batches (~16%)\n",
+    "* Testing set: 96 examples, 3 batches (~16%)\n",
+    "\n",
+    "Which adds up to 608 examples and 19 batches.\n",
+    "\n",
+    "#### Playing Around with the Dataset Wrapper\n",
+    "This is our final product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size: 416\n",
+      "Validation set size: 96\n",
+      "Testing set size: 96\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataset import Patient\n",
+    "\n",
+    "# Instantiate wrapper\n",
+    "patient_dataset = Patient(\"vcg.npy\", \"vcg_length.npy\", \"target.npy\")\n",
+    "\n",
+    "# Sizes of sets\n",
+    "print \"Training set size: \" + str(patient_dataset.train.randomize.max() + 1)\n",
+    "print \"Validation set size: \" + str(patient_dataset.validate.randomize.max() + 1)\n",
+    "print \"Testing set size: \" + str(patient_dataset.test.randomize.max() + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of first example: 0\n",
+      "Dimensions of VCG: (32, 170, 3)\n",
+      "Dimensions of VCG lengths: (32,)\n",
+      "Dimensions of targets: (32,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the first batch\n",
+    "batch_vcg, batch_vcg_length, batch_target = patient_dataset.train.next_batch()\n",
+    "\n",
+    "# Index of first example given in batch\n",
+    "print \"Index of first example: \" + str(patient_dataset.train.index)\n",
+    "\n",
+    "# Shape of next batch\n",
+    "print \"Dimensions of VCG: \" + str(batch_vcg.shape)\n",
+    "print \"Dimensions of VCG lengths: \" + str(batch_vcg_length.shape)\n",
+    "print \"Dimensions of targets: \" + str(batch_target.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[236 279 320  44 388 139  53 237 100 229  26   8 156 402 101 332  98 210\n",
+      " 162  34 390 225 231 378 348 127 246 198 103 396 129 247  57   7 363 334\n",
+      " 269 138 245 232 170  85 205 214 168  10 249 276 395 200 117 121 293  32\n",
+      " 191 250  86 309 380 130  77 294 251 275 110 107 148 263 218  96 284 345\n",
+      " 392 242 325 161 389 221 406 282 283 133  43   6 359 281  33  19 106 201\n",
+      " 286 253 114 260  42 176 256  83 339 228 299 272 361 331  82 154 328 313\n",
+      "  17 349 184 171 190 288 399  20  64 340 415  45  87  25 384 131 373 327\n",
+      " 108  59 377 322  47 266  49 188 280 382  75 394 145 410 193  56 333 364\n",
+      " 202 351 307 197 405 362 224  61  60 295 336 158 196 366 414  97 386 234\n",
+      " 369 360 330 209 315 303 233  28  12  14 136   0 407 379 215  40 222  65\n",
+      " 411  48 319  90 338 296 227 169 316 102 230 374  79 258  72 124  76   2\n",
+      " 289 217 403 372 115 186  88 254 370  35   9 337 163 160 318 157 211 166\n",
+      "  27 357 270  71 343 297 300  18 143 285 375  39 105 132   5 194 350  24\n",
+      " 112 255 175 180 404 119  54 308  67  41 355 181 109 164 185 134 305 135\n",
+      " 179 261 304  21 199  84 264 302   3  89 147 240  16  36 292 223 290 187\n",
+      " 306  99 104 248 182 137 125 195  13 146 298 206  81 212 409 365 347 376\n",
+      "  37 329 271 265 144 400 344 385 165 126 142  66  95  31  94 174 312 252\n",
+      " 401 352 267 128 393 277 172 241 167 159  93   1 397 356  51 152 413 155\n",
+      " 387 216   4  15 323 335  38 192  62 204  73 220 391 244  55 346 178  23\n",
+      " 213 123 383 116 381  91 301  80 257 118 412 203  52 150 141 358 353 122\n",
+      " 173 243  11 278 208  78 368 239 371 207 287  69 238 149 291 273  30 219\n",
+      " 226 120 151 235 189 268  46  63  92 111 367 317  50  70 274 140  68  58\n",
+      " 324 259 153 398  74 262  22 314 113 341 310 183 354 177 321  29 326 342\n",
+      " 408 311]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can see the how the set was randomized by accessing the \"randomize\" member\n",
+    "print patient_dataset.train.randomize"
    ]
   },
   {
