--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -21,14 +21,16 @@
     "Because we view the VCG as a sequence, each timestep can be viewed as one element in the sequence. For every time ```t```, we are given three inputs, the  ```(x, y, z)``` coordinates of the vector head.\n",
     "\n",
     "### *Output*\n",
-    "We will be classifying each VCG based on the corresponding dyssynchrony index from that same simulation. The dyssynchrony index theoretically ranges from 0 to 1, but we will only be concerned with the range of 0.5 to 1. This range will be further divided into 5 regular intervals. Specifically, these intervals will be ```[0.5, 0.6), [0.6, 0.7), [0.7, 0.8), [0.8, 0.9)```, and ```[0.9, 1.0]```. Simulations with dyssynchrony indices under 0.5 will be considered faulty and will be placed in the first interval, ```[0.5, 0.6)```. Also, note that simulations with dyssynchrony indices of 1.0 will be placed in the last interval, ```[0.9, 1.0]```. These intervals will be labeled as follows (intervals are 0-indexed):\n",
+    "We will be classifying each VCG based on the corresponding dyssynchrony index from that same simulation. The dyssynchrony index is a scalar value that theoretically ranges from 0 to 1, but we will only be concerned with the range of 0.5 to 1. This range will be further divided into 5 regular intervals, which will serve as our \"classes\". Specifically, these intervals will be ```[0.5, 0.6), [0.6, 0.7), [0.7, 0.8), [0.8, 0.9)```, and ```[0.9, 1.0]```. Simulations with dyssynchrony indices under 0.5 will be considered faulty and will be placed in the first interval, ```[0.5, 0.6)```. Also, note that simulations with dyssynchrony indices of 1.0 will be placed in the last interval, ```[0.9, 1.0]```. These intervals will be labeled as follows (intervals are 0-indexed):\n",
     "* ```0: [0.5, 0.6)```\n",
     "* ```1: [0.6, 0.7)```\n",
     "* ```2: [0.7, 0.8)```\n",
     "* ```3: [0.8, 0.9)```\n",
     "* ```4: [0.9, 1.0]```\n",
     "  \n",
-    "Thus, for example, a VCG sequence with a corresponding dyssynchrony index of 0.78 will be placed in class ```\"2\"``` since it falls in the range of 0.7 and 0.8, the third interval."
+    "For example, a VCG sequence with a corresponding dyssynchrony index of 0.78 will be placed in class ```\"2\"``` since it falls in the range of 0.7 and 0.8, the third interval.\n",
+    "\n",
+    "Thus, the output of the neural network will be a probability distribution signifying how likely a simulation with the given VCG will have a dyssynchrony index that falls under each of the five intervals."
    ]
   },
   {
@@ -80,12 +82,10 @@
     "# Hyperparameters\n",
     "learning_rate = 0.05\n",
     "training_iters = 125\n",
-    "batch_size = 20\n",
-    "display_step = 10\n",
     "num_hidden = 100\n",
     "\n",
     "# Network Parameters\n",
-    "num_steps = 120\n",
+    "num_steps = 170\n",
     "num_inputs = 3\n",
     "num_classes = 5\n",
     "\n",
@@ -99,9 +99,9 @@
    "source": [
     "## Input Placeholders\n",
     "We define three placeholders. They are for the following:\n",
-    "* VCG sequence input\n",
-    "* VCG sequence length\n",
-    "* targets (used for training)"
+    "* VCG sequence input: ```[num_steps, batch_size, num_inputs]```\n",
+    "* VCG sequence length: ```[batch_size]```\n",
+    "* targets (not hot vectors): ```[batch_size]```"
    ]
   },
   {
@@ -115,13 +115,13 @@
     "import tensorflow as tf \n",
     "\n",
     "# VCG input \n",
-    "inputs = tf.placeholder(tf.float32, [None, num_inputs, num_steps])\n",
+    "x = tf.placeholder(tf.float32, [num_steps, None, num_inputs])\n",
     "\n",
     "# VCG sequence lengths\n",
     "sequence_length = tf.placeholder(tf.int32, [None])\n",
     "\n",
     "# Index of class the VCG should be categorized as\n",
-    "y = tf.placeholder(tf.float32, [None, num_classes])"
+    "y = tf.placeholder(tf.float32, [None])"
    ]
   },
   {
@@ -168,18 +168,24 @@
     "from tensorflow.python.ops import rnn_cell\n",
     "\n",
     "# Define a lstm cell with tensorflow\n",
-    "cell = rnn_cell.BasicLSTMCell(num_units=num_hidden, forget_bias=1.0)"
+    "cell = rnn_cell.BasicLSTMCell(\n",
+    "    num_units=num_hidden, \n",
+    "    forget_bias=1.0, \n",
+    "    state_is_tuple=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Predictions\n",
     "We will be using the ```tf.nn.dynamic_rnn``` function, instead of the ```tf.nn.rnn``` function, to get the output of the recurrent neural network. Unlike ```tf.nn.rnn```, ```tf.nn.dynamic_rnn``` takes in variable sequence lengths (it uses a ``tf.While`` loop to dynamically construct the computational graph). Also, it is faster (supposedly), despite the fact that ```tf.nn.rnn``` prebuilds the graph. The parameters are as follows:\n",
     "* ```cell```: an instance of RNN cell.\n",
-    "* ```inputs```: the RNN input, a single Tensor. The dimensions are [batch_size, sequence_length, num_inputs]\n",
+    "* ```dtype```: (optional) The data type for the initial state and the expected output. \n",
     "* ```sequence_length```: (optional) An int32/64 vector of size [batch_size] specifying the length of each sequence.\n",
-    "* ```dtype```: (optional) The data type for the initial state and the expected output. "
+    "* ```inputs```: the RNN input, a single Tensor. The dimensions are [batch_size, sequence_length, num_inputs]\n",
+    "* ```time_major```: Specifies that the max number of timesteps comes as the first dimensions, so the input placeholder must be of shape ```[max_time, batch_size, num_inputs]```. This requires us to permute the input matrix.\n"
    ]
   },
   {
@@ -188,31 +194,135 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output, states = tf.nn.dynamic_rnn(\n",
     "    cell=cell,\n",
     "    dtype=tf.float32,\n",
     "    sequence_length=sequence_length,\n",
-    "    inputs=inputs\n",
-    ")\n",
-    "\n",
-    "print \"hello\""
+    "    inputs=x,\n",
+    "    time_major=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "We bring to attention the parameter ```time_major```, which we set to ```True```. This specifies that for our input placeholder, the ```max_time``` will be the *first* dimension, so it must have shape ```[max_time, batch_size, num_inputs]```. As a result, the output tensor would have shape ```[max_time, batch_size, num_hidden]```. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(170, ?, 100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Shape of output tensor\n",
+    "print output.get_shape()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO specify sequence lengths"
+    "This is advantageous for two reasons:\n",
+    "* We can easily access the *last* timestep by calling ```output[-1]``` (we are only concerned with the last timestep as this is a sequence classification problem).\n",
+    "* Increases efficiency because it avoids transpositions at the beginning and end of the RNN calculation (https://www.tensorflow.org/versions/r0.10/api_docs/python/nn/recurrent_neural_networks#dynamic_rnn)\n",
+    "\n",
+    "However, we must alter our input, because they come in shape ```[batch_size, max_time, num_input]```, as it was the more *intuitive* way of bundling our data. Specifically, we must permute the ```0th``` and ```1st``` dimension so that the shape will be ```[max_time, batch_size, num_inputs]```. We can do so by calling NumPy's ```np.swapaxes``` function on ```batch_x``` before passing it into the ```feed_dict```.\n",
+    "\n",
+    "Below is an example of permuting the ```0th``` and ```1st``` axes of the batch of VCGs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before: (32, 170, 3)\n",
+      "After: (170, 32, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Initialize a dummy iterator for the purpose of this example\n",
+    "dummy_dataset = Patient(\"vcg.npy\", \"vcg_length.npy\", \"target.npy\")\n",
+    "\n",
+    "# Grab the first batch\n",
+    "batch_x, batch_length, batch_target = dummy_dataset.train.next_batch()\n",
+    "\n",
+    "# Get the shape before permutation\n",
+    "print \"Before: \" + str(batch_x.shape)\n",
+    "\n",
+    "# Permute the 0th and 1st axes\n",
+    "batch_x = np.swapaxes(batch_x, 0, 1)\n",
+    "print \"After: \" + str(batch_x.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Activation\n",
+    "After we get the outputs for every timestep, we extract the output for the *last* timestep and apply a linear activation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (?, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "logits = tf.matmul(output[-1], weights) + biases\n",
+    "\n",
+    "# Shape should be [batch_size, num_classes]\n",
+    "print \"Shape: \" + str(logits.get_shape())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training and Evaluation\n",
+    "Up to this point, we are able to feed forward our input and have the neural network output its \"prediction\". Now we need to set up some key functions to allow for this network to be trained.\n",
+    "\n",
+    "### Cross Entropy Loss\n",
+    "\n",
+    "### Gradients and Minimizing Loss\n",
+    "\n",
+    "### Determining Accuracy"
    ]
   },
   {
