ready to start training

--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -60,14 +60,15 @@
     "from dataset import Patient\n",
     "\n",
     "# Initialize dataset iterator\n",
-    "patient_dataset = Patient(\"vcg.npy\", \"vcg_length.npy\", \"target.npy\")"
+    "patient_dataset = Patient(\"dataset/vcg.npy\", \"dataset/vcg_length.npy\", \"dataset/target.npy\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Network Dimensions\n",
+    "## Initialization\n",
+    "### Network Dimensions\n",
     "We will define the dimensions of our data, as well as the initial hyperparameters of our neural network here. Note: these parameters have not been optimized, they are simply for proof of concept."
    ]
   },
@@ -97,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Input Placeholders\n",
+    "### Input Placeholders\n",
     "We define three placeholders. They are for the following:\n",
     "* VCG sequence input: ```[num_steps, batch_size, num_inputs]```\n",
     "* VCG sequence length: ```[batch_size]```\n",
@@ -121,14 +122,14 @@
     "sequence_length = tf.placeholder(tf.int32, [None])\n",
     "\n",
     "# Index of class the VCG should be categorized as\n",
-    "y = tf.placeholder(tf.float32, [None])"
+    "y = tf.placeholder(tf.int64, [None])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Weights and Biases\n",
+    "### Weights and Biases\n",
     "The recurrent neural network creates an output at every timestep. Since this is a problem of sequence classification, we are only interested in the output produced at the last timestep, ```t=t_end```. We then apply a linear activation on it. The weights and biases are initialized with random values from a normal distribution, with a mean of 0.0 and a standard deviation of 1.0."
    ]
   },
@@ -179,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predictions\n",
+    "## Prediction Operation\n",
     "We will be using the ```tf.nn.dynamic_rnn``` function, instead of the ```tf.nn.rnn``` function, to get the output of the recurrent neural network. Unlike ```tf.nn.rnn```, ```tf.nn.dynamic_rnn``` takes in variable sequence lengths (it uses a ``tf.While`` loop to dynamically construct the computational graph). Also, it is faster (supposedly), despite the fact that ```tf.nn.rnn``` prebuilds the graph. The parameters are as follows:\n",
     "* ```cell```: an instance of RNN cell.\n",
     "* ```dtype```: (optional) The data type for the initial state and the expected output. \n",
@@ -226,13 +227,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(170, ?, 100)\n"
+      "Output tensor shape: (170, ?, 100)\n"
      ]
     }
    ],
    "source": [
     "# Shape of output tensor\n",
-    "print output.get_shape()"
+    "print \"Output tensor shape: \" + str(output.get_shape())"
    ]
   },
   {
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -259,8 +260,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before: (32, 170, 3)\n",
-      "After: (170, 32, 3)\n"
+      "Input batch shape before swap: (32, 170, 3)\n",
+      "Input batch shape after swap: (170, 32, 3)\n"
      ]
     }
    ],
@@ -268,17 +269,17 @@
     "import numpy as np\n",
     "\n",
     "# Initialize a dummy iterator for the purpose of this example\n",
-    "dummy_dataset = Patient(\"vcg.npy\", \"vcg_length.npy\", \"target.npy\")\n",
+    "dummy_dataset = Patient(\"dataset/vcg.npy\", \"dataset/vcg_length.npy\", \"dataset/target.npy\")\n",
     "\n",
     "# Grab the first batch\n",
     "batch_x, batch_length, batch_target = dummy_dataset.train.next_batch()\n",
     "\n",
     "# Get the shape before permutation\n",
-    "print \"Before: \" + str(batch_x.shape)\n",
+    "print \"Input batch shape before swap: \" + str(batch_x.shape)\n",
     "\n",
     "# Permute the 0th and 1st axes\n",
     "batch_x = np.swapaxes(batch_x, 0, 1)\n",
-    "print \"After: \" + str(batch_x.shape)"
+    "print \"Input batch shape after swap: \" + str(batch_x.shape)"
    ]
   },
   {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: (?, 5)\n"
+      "Shape of output after linear activation: (?, 5)\n"
      ]
     }
    ],
@@ -308,7 +309,7 @@
     "logits = tf.matmul(output[-1], weights) + biases\n",
     "\n",
     "# Shape should be [batch_size, num_classes]\n",
-    "print \"Shape: \" + str(logits.get_shape())"
+    "print \"Shape of output after linear activation: \" + str(logits.get_shape())"
    ]
   },
   {
@@ -319,10 +320,157 @@
     "Up to this point, we are able to feed forward our input and have the neural network output its \"prediction\". Now we need to set up some key functions to allow for this network to be trained.\n",
     "\n",
     "### Cross Entropy Loss\n",
+    "We will be using TensorFlow's ```tf.nn.sparse_softmax_cross_entropy_with_logits``` function which measures the probability error in discrete classification tasks in which the classes are *mutually exclusive*. Note that this operation expects unscaled logits and it performs softmax internally for efficiency. \n",
     "\n",
-    "### Gradients and Minimizing Loss\n",
+    "Its parameters are as follows:\n",
+    "* logits: float32/64 with shape ```[batch_size, num_classes]```\n",
+    "* labels: int32/64 with shape ```[batch_size]``` where each entry is a value between ```[0, num_classes)```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of costs: (?,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate costs for each example\n",
+    "costs = tf.nn.sparse_softmax_cross_entropy_with_logits(logits, y)\n",
+    "print \"Shape of costs: \" + str(costs.get_shape())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This calculates the cost for each example in the batch. To find the batch cost, we average over all costs in the batch using ```tf.reduce_mean```.\n",
     "\n",
-    "### Determining Accuracy"
+    "Its parameters are as follows:\n",
+    "* input_tensor: The tensor to reduce. Should have numeric type.\n",
+    "* axis: The dimensions to reduce. If None (the default), reduces all dimensions.\n",
+    "* keep_dims: If true, retains reduced dimensions with length 1.\n",
+    "* name: A name for the operation (optional)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: ()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cost function\n",
+    "cost = tf.reduce_mean(costs)\n",
+    "\n",
+    "# Output is a scalar value\n",
+    "print \"Shape: \" + str(cost.get_shape())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimizer\n",
+    "Once we define our cost function, we now know what we are trying to minimize. We will use a TensorFlow-defined operation that implements the Adam Algorithm, ```tf.train.AdamOptimizer``` with the following parameters:\n",
+    "* learning_rate: A Tensor or a floating point value. The learning rate (default is 0.001)\n",
+    "* beta1: A float value or a constant float tensor. The exponential decay rate for the 1st moment estimates (default is 0.9).\n",
+    "* beta2: A float value or a constant float tensor. The exponential decay rate for the 2nd moment estimates (default is 0.999).\n",
+    "* epsilon: A small constant for numerical stability (default is 1e-08).\n",
+    "* use_locking: If True use locks for update operations (default is False).\n",
+    "* name: Optional name for the operations created when applying gradients. Defaults to \"Adam\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Initialize TF optimizer\n",
+    "optimizer = tf.train.AdamOptimizer(\n",
+    "    learning_rate=learning_rate,\n",
+    "    name=\"AdamOptimizer\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we initialize an optimizer, we can simply call the ```optimizer.minimize()``` function to both calculate the gradients and apply them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Training op\n",
+    "train = optimizer.minimize(cost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Determining Accuracy\n",
+    "Instead of looking at the raw cost to determine the model's performance, we can simply calculate how accurately the model correctly predicted the right class that the VCG falls in. To extract the *class* that the model predicted, we simply call ```tf.argmax``` which returns the index with the largest across a specified axis of a tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy shape: ()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare predictions with targets\n",
+    "compare = tf.equal(tf.argmax(logits, 1), y)\n",
+    "\n",
+    "# Cast booleans to ints\n",
+    "accuracy = tf.reduce_mean(tf.cast(compare, tf.int64))\n",
+    "\n",
+    "# Shape should be a single scalar value\n",
+    "print \"Accuracy shape: \" + str(accuracy.get_shape())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are now ready to begin training!"
    ]
   },
   {
