--- a/dataset_wrapper.ipynb
+++ b/dataset_wrapper.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Implementation Steps\n",
     "### *Step 0: Setup*\n",
-    "To download the dataset, go to https://www.dropbox.com/sh/guyvsq010l2d5gw/AAB3kYvolOyPqhE2Ad0lTiKIa?dl=0 and download the folder ```BiV2``` that corresponds to Patient 2 (our choice of Patient 2 is arbitrary, and we can use any of the patients available). Within that folder, we find the following files and folders:\n",
+    "To download the dataset, please email Chris Villongco for the link to the Dropbox. Once you have access, download the folder ```BiV2``` that corresponds to Patient 2 (our choice of Patient 2 is arbitrary, and we can use any of the patients available). Within that folder, we find the following files and folders:\n",
     "* ```vcg_measured```* The actual (recorded) VCG (not simulated)\n",
     "* ```vcg_model/``` The VCG simulations\n",
     "* ```BiV2_LVdyssync_opt.txt```* The calculated dyssynchrony index (not from simulations)\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -219,9 +219,9 @@
     "import numpy as np\n",
     "\n",
     "# Import our length and vcg sequence and class index\n",
-    "vcg = np.load(\"vcg.npy\")\n",
-    "vcg_length = np.load(\"vcg_length.npy\")\n",
-    "target = np.load(\"target.npy\")\n",
+    "vcg = np.load(\"dataset/vcg.npy\")\n",
+    "vcg_length = np.load(\"dataset/vcg_length.npy\")\n",
+    "target = np.load(\"dataset/target.npy\")\n",
     "\n",
     "print \"VCG Dimensions: \" + str(vcg.shape)\n",
     "print \"VCG Sequence Length Dimensions: \" + str(vcg_length.shape)\n",
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +396,7 @@
     "from dataset import Patient\n",
     "\n",
     "# Instantiate wrapper\n",
-    "patient_dataset = Patient(\"vcg.npy\", \"vcg_length.npy\", \"target.npy\")\n",
+    "patient_dataset = Patient(\"dataset/vcg.npy\", \"dataset/vcg_length.npy\", \"dataset/target.npy\")\n",
     "\n",
     "# Sizes of sets\n",
     "print \"Training set size: \" + str(patient_dataset.train.randomize.max() + 1)\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -415,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index of first example: 0\n",
+      "Index of first example: 32\n",
       "Dimensions of VCG: (32, 170, 3)\n",
       "Dimensions of VCG lengths: (32,)\n",
       "Dimensions of targets: (32,)\n"
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -446,30 +446,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[236 279 320  44 388 139  53 237 100 229  26   8 156 402 101 332  98 210\n",
-      " 162  34 390 225 231 378 348 127 246 198 103 396 129 247  57   7 363 334\n",
-      " 269 138 245 232 170  85 205 214 168  10 249 276 395 200 117 121 293  32\n",
-      " 191 250  86 309 380 130  77 294 251 275 110 107 148 263 218  96 284 345\n",
-      " 392 242 325 161 389 221 406 282 283 133  43   6 359 281  33  19 106 201\n",
-      " 286 253 114 260  42 176 256  83 339 228 299 272 361 331  82 154 328 313\n",
-      "  17 349 184 171 190 288 399  20  64 340 415  45  87  25 384 131 373 327\n",
-      " 108  59 377 322  47 266  49 188 280 382  75 394 145 410 193  56 333 364\n",
-      " 202 351 307 197 405 362 224  61  60 295 336 158 196 366 414  97 386 234\n",
-      " 369 360 330 209 315 303 233  28  12  14 136   0 407 379 215  40 222  65\n",
-      " 411  48 319  90 338 296 227 169 316 102 230 374  79 258  72 124  76   2\n",
-      " 289 217 403 372 115 186  88 254 370  35   9 337 163 160 318 157 211 166\n",
-      "  27 357 270  71 343 297 300  18 143 285 375  39 105 132   5 194 350  24\n",
-      " 112 255 175 180 404 119  54 308  67  41 355 181 109 164 185 134 305 135\n",
-      " 179 261 304  21 199  84 264 302   3  89 147 240  16  36 292 223 290 187\n",
-      " 306  99 104 248 182 137 125 195  13 146 298 206  81 212 409 365 347 376\n",
-      "  37 329 271 265 144 400 344 385 165 126 142  66  95  31  94 174 312 252\n",
-      " 401 352 267 128 393 277 172 241 167 159  93   1 397 356  51 152 413 155\n",
-      " 387 216   4  15 323 335  38 192  62 204  73 220 391 244  55 346 178  23\n",
-      " 213 123 383 116 381  91 301  80 257 118 412 203  52 150 141 358 353 122\n",
-      " 173 243  11 278 208  78 368 239 371 207 287  69 238 149 291 273  30 219\n",
-      " 226 120 151 235 189 268  46  63  92 111 367 317  50  70 274 140  68  58\n",
-      " 324 259 153 398  74 262  22 314 113 341 310 183 354 177 321  29 326 342\n",
-      " 408 311]\n"
+      "[215 180 397 366 137  43 195 220 279  10 408   3 282 283 256 290 248 119\n",
+      " 315 273 121 161  66 377 169 337  37 403 183 340 406 247 203 221 286  63\n",
+      "  44 328 200 185 231 399 389 107 131 304 232 338  64 276 378 143 122 135\n",
+      " 300 392 277 369 216  93 380  99 324 168 325  41 105 223  74  55 395  38\n",
+      " 350 405 182 258 264 228 409 139  90 361 197 318 147 326 151 184 123 321\n",
+      " 285  40  96 330 234  92 319 271  57 347 298 303 174 217 156 292 252 243\n",
+      " 351 149  20  97  67 394 211 128  77 345 353 360 170 145  21  17 210  26\n",
+      " 362  60 357 402 414 173  50 311 126 154 372 177  83 251 175  32  11  59\n",
+      " 259  88 370 191  81 225 188 278 323 144 363 214 240 206 178 333  56  75\n",
+      " 166 117  79 262 209 287  19  25  48 320 265 297 244 140 192  28 257   0\n",
+      " 167 307 386 384 281 125 396 302  76 253 222  84  46 164 114  45  80 233\n",
+      " 103 246 219  15  70 186 288 365  72 199 150 133  89 160  22  33   7 241\n",
+      " 141  42  52  23 385   5 317 335  14 132 387 383 130  31 205  68 245  62\n",
+      "  29  13 236 368 296  82 229 331 356 196   4 224 354 104 346 181  91 305\n",
+      " 316 187 153 109  12 112 267  54 165 179 312 371 374  51 275 379 295 332\n",
+      " 310 294 255 158 280  73 322 270 235 336 162 263 189  86 299  85 367 415\n",
+      "   1 148 376 163 146 212  69 136 172 359 355 237 249 142 308  36 382  39\n",
+      " 190 194 155   9 400  87  24 301 254 113 358 134 120 388 373 218 413 393\n",
+      " 111 341 293 159 176 118  18 239  65  53  61 171 129  49 138 230  16 127\n",
+      " 401 208 260 314  98  94 349   8  47 116 343 269 327 348  34 407 102 411\n",
+      " 352 124 157 238  35  58 306 390 410 334 329 375  30 412 242 213 268 291\n",
+      " 272 250 152 106 110  95 100 342 313 204 284   6 309 266 101 339 289 227\n",
+      " 207 404 201 274 115 261 381  78 193 398  71 391  27   2 198 108 226 364\n",
+      " 344 202]\n"
      ]
     }
    ],
