--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -338,14 +338,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of costs: (?,)\n"
+      "Shape of costs (before averaging): (?,)\n"
      ]
     }
    ],
    "source": [
     "# Calculate costs for each example\n",
     "costs = tf.nn.sparse_softmax_cross_entropy_with_logits(logits, y)\n",
-    "print \"Shape of costs: \" + str(costs.get_shape())"
+    "print \"Shape of costs (before averaging): \" + str(costs.get_shape())"
    ]
   },
   {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: ()\n"
+      "Shape of cost (scalar value): ()\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
     "cost = tf.reduce_mean(costs)\n",
     "\n",
     "# Output is a scalar value\n",
-    "print \"Shape: \" + str(cost.get_shape())"
+    "print \"Shape of cost (scalar value): \" + str(cost.get_shape())"
    ]
   },
   {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -451,7 +451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy shape: ()\n"
+      "Accuracy shape (scalar value): ()\n"
      ]
     }
    ],
@@ -463,7 +463,7 @@
     "accuracy = tf.reduce_mean(tf.cast(compare, tf.int64))\n",
     "\n",
     "# Shape should be a single scalar value\n",
-    "print \"Accuracy shape: \" + str(accuracy.get_shape())"
+    "print \"Accuracy shape (scalar value): \" + str(accuracy.get_shape())"
    ]
   },
   {
